--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.19.0",
     "jest": "^24.9.0",
     "nodemon": "^1.19.4",
+    "sinon": "^7.5.0",
     "ts-node": "^8.4.1",
     "typescript": "^3.7.2"
   },
