--- a/package.json
+++ b/package.json
@@ -14,19 +14,19 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.2",
+    "@types/jest": "^24.0.22",
     "@types/node": "^12.12.6",
     "axios": "^0.19.0",
     "jest": "^24.9.0",
     "nodemon": "^1.19.4",
     "sinon": "^7.5.0",
+    "ts-jest": "^24.1.0",
     "ts-node": "^8.4.1",
+    "tslint": "^5.20.1",
     "typescript": "^3.7.2"
   },
   "dependencies": {
-    "@types/jest": "^24.0.22",
-    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "ts-jest": "^24.1.0"
+    "express": "^4.17.1"
   }
 }
