--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node dist/app.js",
     "build": "tsc -p .",
     "dev": "nodemon src/app.ts",
-    "prod": "npm run build && node dist/app.js"
+    "prod": "npm run build && node dist/app.js",
+    "lint": "tslint -c tslint.json 'src/**/*.ts'"
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +28,7 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "winston": "^3.2.1"
   }
 }
