send grid implementation

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ MAILGUN_API=https://api.mailgun.net/v3/sandboxbb9294b0d66741b2a60a57daa672677a.m
 TEST_SUBJECT=Test Mail
 MAILGUN_USER=api
 MAILGUN_PASSWORD=
+
+SENDGRID_API=https://api.sendgrid.com/v3/mail
+SENDGRID_API_KEY=
