--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@types/node": "^12.12.6",
     "axios": "^0.19.0",
     "jest": "^24.9.0",
-    "nodemon": "^1.19.4",
     "sinon": "^7.5.0",
     "ts-jest": "^24.1.0",
     "ts-node": "^8.4.1",
@@ -29,6 +28,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "nodemon": "^1.19.4"
   }
 }
