--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ PORT=3000
 MAILGUN_API=https://api.mailgun.net/v3/sandboxbb9294b0d66741b2a60a57daa672677a.mailgun.org
 TEST_SUBJECT=Test Mail
 MAILGUN_USER=api
-MAILGUN_PASSWORD=
+MAILGUN_PASSWORD=123
 
 SENDGRID_API=https://api.sendgrid.com/v3/mail
-SENDGRID_API_KEY=
+SENDGRID_API_KEY=123
