--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --verbose",
     "start": "node dist/app.js",
     "build": "tsc -p .",
     "dev": "nodemon src/app.ts",
@@ -19,7 +19,9 @@
     "@types/node": "^12.12.6",
     "axios": "^0.19.0",
     "jest": "^24.9.0",
+    "should": "^13.2.3",
     "sinon": "^7.5.0",
+    "supertest": "^4.0.2",
     "ts-jest": "^24.1.0",
     "ts-node": "^8.4.1",
     "tslint": "^5.20.1",
