--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "winston": "^3.2.1",
-    "nodemon": "^1.19.4"
+    "nodemon": "^1.19.4",
+    "swagger-ui-express": "^4.1.2",
+    "winston": "^3.2.1"
   }
 }
