--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.2.0",
     "nodemon": "^1.19.4",
     "swagger-ui-express": "^4.1.2",
     "winston": "^3.2.1"
